@@ -13,9 +13,6 @@ env:
   - DJANGO="Django>=1.9,<1.10"
   - DJANGO="Django>=1.8,<1.9"
   - DJANGO="Django>=1.7,<1.8"
-  - DJANGO="Django>=1.6,<1.7"
-  - DJANGO="Django>=1.5,<1.6"
-  - DJANGO="Django>=1.4,<1.5"
 
 install:
   - pip install -U coverage coveralls $DJANGO
@@ -27,37 +24,10 @@ matrix:
   exclude:
    - python: 3.6
      env: DJANGO="Django>=1.7,<1.8"
-   - python: 3.6
-     env: DJANGO="Django>=1.6,<1.7"
-   - python: 3.6
-     env: DJANGO="Django>=1.5,<1.6"
-   - python: 3.6
-     env: DJANGO="Django>=1.4,<1.5"
 
    - python: 3.5
      env: DJANGO="Django>=1.7,<1.8"
-   - python: 3.5
-     env: DJANGO="Django>=1.6,<1.7"
-   - python: 3.5
-     env: DJANGO="Django>=1.5,<1.6"
-   - python: 3.5
-     env: DJANGO="Django>=1.4,<1.5"
 
-   - python: 3.4
-     env: DJANGO="Django>=1.5,<1.6"
-   - python: 3.4
-     env: DJANGO="Django>=1.4,<1.5"
-
-   - python: 3.3
-     env: DJANGO="Django>=1.11,<1.12"
-   - python: 3.3
-     env: DJANGO="Django>=1.10,<1.11"
-   - python: 3.3
-     env: DJANGO="Django>=1.9,<1.10"
-   - python: 3.3
-     env: DJANGO="Django>=1.5,<1.6"
-   - python: 3.3
-     env: DJANGO="Django>=1.4,<1.5"
 
 after_success:
   coveralls
