@@ -9,11 +9,10 @@ http://github.com/idlesign/django-sitemetrics
 Requirements
 ------------
 
-1. Python 2.7+ or 3.3+
-2. Django 1.4+
+1. Python 2.7+ or 3.4+
+2. Django 1.7+
 3. Django Sites contrib enabled (optional)
 4. Django Admin contrib enabled (optional)
-5. South (for automatic DB migrations)
 
 
 Table of Contents
