@@ -2,6 +2,11 @@ django-sitemetrics changelog
 ============================
 
 
+Unreleased
+----------
+* Dropped support for Python<3.4 and Django<1.7.
+
+
 v0.6.1
 ------
 * Package distribution fix.
